; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/pcie/aer/extr_aerdrv_core.c_add_error_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/pcie/aer/extr_aerdrv_core.c_add_error_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aer_err_info = type { i64, %struct.pci_dev** }
%struct.pci_dev = type { i32 }

@AER_MAX_MULTI_ERR_DEVICES = common dso_local global i64 0, align 8
@ENOSPC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aer_err_info*, %struct.pci_dev*)* @add_error_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_error_device(%struct.aer_err_info* %0, %struct.pci_dev* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.aer_err_info*, align 8
  %5 = alloca %struct.pci_dev*, align 8
  store %struct.aer_err_info* %0, %struct.aer_err_info** %4, align 8
  store %struct.pci_dev* %1, %struct.pci_dev** %5, align 8
  %6 = load %struct.aer_err_info*, %struct.aer_err_info** %4, align 8
  %7 = getelementptr inbounds %struct.aer_err_info, %struct.aer_err_info* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @AER_MAX_MULTI_ERR_DEVICES, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %24

11:                                               ; preds = %2
  %12 = load %struct.pci_dev*, %struct.pci_dev** %5, align 8
  %13 = load %struct.aer_err_info*, %struct.aer_err_info** %4, align 8
  %14 = getelementptr inbounds %struct.aer_err_info, %struct.aer_err_info* %13, i32 0, i32 1
  %15 = load %struct.pci_dev**, %struct.pci_dev*** %14, align 8
  %16 = load %struct.aer_err_info*, %struct.aer_err_info** %4, align 8
  %17 = getelementptr inbounds %struct.aer_err_info, %struct.aer_err_info* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.pci_dev*, %struct.pci_dev** %15, i64 %18
  store %struct.pci_dev* %12, %struct.pci_dev** %19, align 8
  %20 = load %struct.aer_err_info*, %struct.aer_err_info** %4, align 8
  %21 = getelementptr inbounds %struct.aer_err_info, %struct.aer_err_info* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %21, align 8
  store i32 0, i32* %3, align 4
  br label %27

24:                                               ; preds = %2
  %25 = load i32, i32* @ENOSPC, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %24, %11
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
